logs/Slang/chapter-6/6.16.1--string_len.sv.log
name: string_len
description: string.len()  tests
should_fail: 0
tags: 6.16.1
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.1--string_len.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.1--string_len.sv:9:11: error: invalid member access for type 'string'
	int b = a.len();
	        ~^~~~
